tests/baselines/reference/parserRegularExpression1.errors.txt
parserRegularExpression1.ts(1,34): error TS1514: A character class range must not be bounded by another character class.


==== parserRegularExpression1.ts (1 errors) ====
    return /(#?-?\d*\.\d\w*%?)|(@?#?[\w-?]+%?)/g;
                                     ~~
!!! error TS1514: A character class range must not be bounded by another character class.